--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="/">Карта</a>
             </li>
             <li class="nav-item {{#if isProductsShow}} active {{/if}}">
-                <a class="nav-link" href="/products_show">Список всех продуктов</a>
+                <a class="nav-link" href="/products_show">Список всех объектов</a>
             </li>
         </ul>
     </div>
