--- a/views/products_show.hbs
+++ b/views/products_show.hbs
@@ -86,7 +86,7 @@
                     </div>
                     <div class="form-group">
                         <label for="regOfProduct">Субъект РФ</label>
-                        <input type="text" class="form-control" id="regOfProduct" name="region" aria-describedby="regHelp">
+                        <input type="text" class="form-control" id="regOfProduct" name="region" aria-describedby="regHelp" value="Россия, Москва">
                         <small id="regHelp" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
